--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ GitPython==3.1.30
 idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
+json
 jsonschema==4.17.3
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
 numpy==1.24.1
+os
 packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
@@ -29,11 +31,13 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
+re
 requests==2.28.2
 rich==13.3.1
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+ssl
 streamlit==1.17.0
 toml==0.10.2
 toolz==0.12.0
