--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
 rich==13.3.1
 semver==2.13.0
+shap==0.41.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.17.0
