--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.5
 cachetools==5.3.0
 charset-normalizer==3.0.1
 click==8.1.3
+cloudpickle==2.0.0
 colorama==0.4.6
 decorator==5.1.1
 entrypoints==0.4
